load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "desktop_lib",
    srcs = ["Main.kt"],
    plugins = ["//build/toolchains/kotlin/compose:compose_compiler_plugin"],
    runtime_deps = ["//build/toolchains/kotlin/compose:skiko_runtime"],
    deps = [
        "//src/samples/greeter/shared:library_jvm",
        "//src/samples/greeter/proto:victor_api_kt_grpc",
        "@third_party_maven//:io_grpc_grpc_okhttp",
        "@third_party_maven//:org_jetbrains_compose_desktop_desktop_jvm",
    ],
)

kt_jvm_test(
    name = "desktop_test",
    srcs = ["MainTest.kt"],
    plugins = ["//build/toolchains/kotlin/compose:compose_compiler_plugin"],
    test_class = "victor.greeter.desktop.MainTest",
    deps = [
        ":desktop_lib",
        "@third_party_maven//:org_jetbrains_compose_ui_ui_test_junit4_desktop",
    ],
)

kt_jvm_binary(
    name = "desktop",
    main_class = "victor.greeter.desktop.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":desktop_lib"],
)
