load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "desktop_lib",
    srcs = ["Main.kt"],
    plugins = ["//build/toolchains/kotlin/compose:compose_compiler_plugin"],
    runtime_deps = ["//build/toolchains/kotlin/compose:skiko_runtime"],
    deps = [
        "//src/common/grpc/client:backend_channel",
        "//src/common/grpc/client:backend_endpoint",
        "//src/samples/greeter/proto:victor_api_kt_grpc",
        "//src/samples/greeter/shared:backend_config",
        "//src/samples/greeter/shared:library_jvm",
        "@third_party_maven//:org_jetbrains_compose_desktop_desktop_jvm",
    ],
)

kt_jvm_test(
    name = "desktop_test",
    srcs = ["MainTest.kt"],
    plugins = ["//build/toolchains/kotlin/compose:compose_compiler_plugin"],
    test_class = "victor.greeter.desktop.MainTest",
    deps = [
        ":desktop_lib",
        "@third_party_maven//:org_jetbrains_compose_ui_ui_test_junit4_desktop",
    ],
)

kt_jvm_binary(
    name = "desktop",
    main_class = "victor.greeter.desktop.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":desktop_lib"],
)
