load("//build/rules:defs.bzl", "ios_application", "ios_unit_test", "swift_library")

swift_library(
    name = "app_lib",
    srcs = ["GreeterApp.swift"],
    module_name = "VictorGreeterIOS",
    deps = [
        "//src/common/grpc/client:backend_channel_swift",
        "//src/common/grpc/client:backend_endpoint",
        "//src/samples/greeter/backend:backend_config",
        "//src/samples/greeter/proto:victor_api",
        "//src/samples/greeter/shared:library",
    ],
)

ios_application(
    name = "app",
    bundle_id = "victor.greeter.ios",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    visibility = ["//visibility:public"],
    deps = [":app_lib"],
)

swift_library(
    name = "app_test_lib",
    testonly = True,
    srcs = ["GreeterAppTest.swift"],
    module_name = "VictorGreeterIOSTests",
    deps = [":app_lib"],
)

ios_unit_test(
    name = "app_test",
    minimum_os_version = "15.0",
    deps = [":app_test_lib"],
)
