load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//build/rules:defs.bzl", "backend_service_url_config", "kt_multiplatform_library")

backend_service_url_config(
    name = "backend_config",
    custom_package = "victor.greeter.shared",
    visibility = ["//visibility:public"],
)

kt_multiplatform_library(
    name = "library",
    srcs = {
        "common": [
            "ComposeGreeting.kt",
            "Greeting.kt",
        ],
        "android": ["Platform.android.kt"],
        "jvm": ["Platform.jvm.kt"],
        "wasm": ["Platform.wasm.kt"],
    },
    android_custom_package = "victor.example.multiplatform",
    platforms = [
        "android",
        "jvm",
        "wasm",
    ],
    plugins = [
        "//build/toolchains/kotlin/compose:compose_compiler_plugin",
        "//build/toolchains/kotlin/serialization:serialization_compiler_plugin",
    ],
    visibility = ["//visibility:public"],
    deps = {
        "common": [
            "@third_party_maven//:androidx_compose_runtime_runtime",
            "@third_party_maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
        ],
    },
)

kt_jvm_test(
    name = "library_jvm_test",
    srcs = ["GreetingTest.kt"],
    test_class = "victor.example.multiplatform.GreetingTest",
    deps = [
        ":library_jvm",
        "@third_party_maven//:junit_junit",
    ],
)
